Add PUT and DELETE for products
