# api/src/api/product.py
@@ -1,4 +1,4 @@
-from src.config import MESSAGE_LOCAL_WRONG_ID, MESSAGE_LOCAL_NOT_FOUND, MESSAGE_USER_WRONG_ID, MESSAGE_USER_NOT_FOUND
+from src.config import MESSAGE_LOCAL_WRONG_ID, MESSAGE_LOCAL_NOT_FOUND, MESSAGE_USER_WRONG_ID, MESSAGE_USER_NOT_FOUND, MESSAGE_PRODUCT_WRONG_ID
 from src.helper import response
 from src.service import local as local_service
 from src.service import product as product_service
@@ -69,5 +69,49 @@ def post(local_id):
             return response.make(error=False, response=dict(product_id=product_id))
         else:
             return response.make(error=True, message=f'{MESSAGE_PARAMETERS_REQUIRED} - {error_message}')
+    except Exception as e:
+        return response.raise_exception(e)
+
+
+def put(local_id, product_id):
+    try:
+        # Check input
+        if not local_id or local_id <= 0:
+            return response.make(error=True, message=MESSAGE_LOCAL_WRONG_ID)
+        if not product_id or product_id <= 0:
+            return response.make(error=True, message=MESSAGE_PRODUCT_WRONG_ID)
+        # Check local
+        product = product_service.get_product(local_id, product_id)
+        if not product:
+            return response.make(error=True, message=MESSAGE_LOCAL_NOT_FOUND)
+        # Get input
+        request_json = request.json
+        name = body.get('name', None)
+        price = body.get('price', None)
+        currency = body.get('currency', None)
+        price_type = body.get('price_type', None)
+        description = body.get('description', None)
+        product_group = body.get('product_group', None)
+        # Process
+        edited = product_service.edit(local_id, product_id, name, price, currency, price_type, description, product_group)
+        return response.make(error=False, response=dict(edited=edited))
+    except Exception as e:
+        return response.raise_exception(e)
+
+
+def delete(local_id, product_id):
+    try:
+        # Check input
+        if not local_id or local_id <= 0:
+            return response.make(error=True, message=MESSAGE_LOCAL_WRONG_ID)
+        if not product_id or product_id <= 0:
+            return response.make(error=True, message=MESSAGE_PRODUCT_WRONG_ID)
+        # Check product
+        product = product_service.get_product(local_id, product_id)
+        if not product:
+            return response.make(error=True, message=MESSAGE_LOCAL_NOT_FOUND)
+        # Process
+        deleted = product_service.delete(local_id, product_id)
+        return response.make(error=False, response=dict(edited=edited))
     except Exception as e:
         return response.raise_exception(e)
